--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -10,9 +10,15 @@
 
 <body>
     <header>
-        <h1>
-            <a href="{% url 'home' %}">Django blog</a>
-        </h1>
+
+        <div class="nav-left">
+            <h1>
+                <a href="{% url 'home' %}">Django blog</a>
+            </h1>
+        </div>
+        <div class="nav-right">
+            <a href="{% url 'post_new' %}">+ New blog post</a>
+        </div>
     </header>
     <div>
         {% block content %}
