--- a/litrreview/templates/base.html
+++ b/litrreview/templates/base.html
@@ -20,6 +20,7 @@
 
         Welcome {{ user.username }}
         <a href="{% url 'logout' %}" style="float: right;margin-left: 10px;">Se deconnecter</a>
+        <a href="{% url 'follow' %}" style="float: right;margin-left: 10px;">Abonnements</a>
         <a href="{% url 'ticket_current_user_list' %}" style="float: right;margin-left: 10px;">Posts</a>
         <a href="{% url 'ticket_list' %}" style="float: right;">Flux</a>
 
