--- a/litrreview/templates/ticket_list.html
+++ b/litrreview/templates/ticket_list.html
@@ -9,7 +9,7 @@ Tickets
 <form action="{% url 'ticket_new' %}" style="text-align: center; float: left;">
     <input type="submit" value="Demander une critique" />
 </form>
-<form action="#">
+<form action="{% url 'ticket_review_new' %}">
     <input type="submit" value="Creer une critique" />
 </form>
 {% for ticket in object_list %}
