--- a/litrreview/templates/ticket_current_user_list.html
+++ b/litrreview/templates/ticket_current_user_list.html
@@ -1,50 +1,120 @@
 {% extends 'base.html' %}
 
-
 {% block title %}
 Tous les tickets de {{ user }}
 {% endblock title %}
 
-
 {% block content %}
-<h1>Vos posts {{ user }}</h1>
+<h1 style="text-align: center;">Vos posts</h1>
 
-{% for item in object_list %}
-<a href="{% url 'ticket_detail' item.pk %}">{{item.title}}</a>
-<p>{{ item.time_created }}</p>
-<p>{{ item.description }}</p>
-<img src="{{ item.image.url }}" alt="no image" width="90" height="144">
-<div>
-    <a href="{% url 'ticket_edit' item.pk %}">Edit</a> |
-    <a href="{% url 'ticket_delete' item.pk %}">Delete</a>|
-    <a href="{% url 'review_new' item.pk %}">Creer une critique</a>
+{% for ticket in object_list %}
+{% if ticket.title %}
+<div style="border-style: solid;width: 80%;margin: auto;word-wrap:break-word;">
+    <div style="font-size: 10px; text-align: right;vertical-align: text-top;">
+        {{ ticket.time_created }}
+    </div>
+    <div>Vous avez demande une critique</div>
+    <br>
+    <!-- <div><a href="{% url 'ticket_detail' ticket.pk %}">{{ticket.title}}</a></div> -->
+    <div>{{ticket.title}}</div>
+    <p>{{ticket.description}}</p>
+    <img src="{{ ticket.image.url }}" alt="no image" width="90" height="144">
 
-</div>
-<div>
-    {% with item.comments.count as total_comments %}
-    <h2>
-        {{ total_comments }} critique{{ total_comments|pluralize }}
-    </h2>
-    {% endwith %}
-    {% for comment in item.comments.all %}
-    <div style="background-color: darkgray;">
-        <p style="color:red">
-            Critique {{ forloop.counter }} by {{ comment.user }}
-            {{ comment.time_created }}
-        </p>
-        <p>rating: {{ comment.rating }}</p>
-        <p>{{ comment.headline }}</p>
-        <p><strong>{{ comment.body|linebreaks }}</strong></p>
-        <div>
-            <a href="{% url 'review_edit' comment.pk %}">Edit</a> |
-            <a href="{% url 'review_delete' comment.pk %}">Delete</a>|
+    <!-- {% if  ticket.comments.all %}
+    {% if ticket.comments.all|length_is:"1" %}
+    {% for comment in ticket.comments.all %}
+    {% ifnotequal  comment.user.username user.username %}
+    {% ifequal comment.user.username ticket.user.username %}
+    <div style=" text-align: right;margin-right: 20px;margin-bottom: 20px;">
+        <form action="{% url 'review_new' ticket.pk %}">
+            <input style="width: 10em;  height: 3em;" type="submit" value="Creer une critique" />
+        </form>
+    </div>
+    {% endifequal %}
+    {% endifnotequal %}
+
+    {% endfor %}
+    {% endif %} -->
+    <div style="width: 100%; margin-bottom: 20px;margin: 20px;">
+        <div style="width: 50%; float: left;text-align: right;margin-bottom: 20px;">
+            <form style="margin-right: 20px;" action="{% url 'ticket_edit' ticket.pk %}">
+                <input style="width: 10em;  height: 3em;" type="submit" value="Modifier" />
+            </form>
+        </div>
+        <div style="margin-left: 50%; ">
+            <form style="margin-left: 20px;" action="{% url 'ticket_delete' ticket.pk %}">
+                <input style="width: 10em;  height: 3em;" type="submit" value="Supprimer" />
+            </form>
         </div>
     </div>
-    {% empty %}
-    <p>Il n'y a aucune critiques.</p>
-    {% endfor %}
+
+    <!-- {% else %}
+    <div style=" text-align: right;margin-right: 20px;margin-bottom: 20px;">
+        <!-- <a href="{% url 'ticket_edit' ticket.pk %}">Edit</a> | -->
+    <!-- <a href="{% url 'ticket_delete' ticket.pk %}">Delete</a>| -->
+    <!-- <form action="{% url 'review_new' ticket.pk %}">
+        <input style="width: 10em;  height: 3em;" type="submit" value="Creer une critique" />
+    </form> -->
+</div>
+{% endif %} -->
+
 </div>
 <hr>
+{% else %}
+<div style="border-style: solid;width: 80%;margin: auto;word-wrap:break-word;">
+    <div>
+        <!-- Critique {{ forloop.counter }} by {{ ticket.user }} -->
+        <div>Vous avez publie une critique</div>
+        <div style="font-size: 10px; text-align: right;vertical-align: text-top;">{{ ticket.time_created }}</div>
+    </div>
+    <p style="font-size: 20px;">{{ ticket.headline }} - rating: {{ ticket.rating }}</p>
+    <p></p>
+    <p>{{ ticket.body|linebreaks }}</p>
+    <div style="border-style: solid;width: 500px;margin: auto;word-wrap:break-word;">
+        <div>Ticket - {{ticket.ticket.user}}</div>
+        <br>
+        <div>{{ticket.ticket.title}}</div>
+        <p>{{ ticket.ticket.description }}</p>
+        <img src="{{ ticket.ticket.image.url }}" alt="no image" width="90" height="144">
+        <!-- <div>
+            <a href="{% url 'review_edit' ticket.pk %}">Edit</a> |
+            <a href="{% url 'review_delete' ticket.pk %}">Delete</a>|
+        </div> -->
+
+        <!-- {% if ticket.ticket.comments.all|length_is:"1" %}
+        {% for comment in ticket.ticket.comments.all %}
+        {% ifnotequal  comment.user.username user.username %}
+        {% ifequal comment.user.username ticket.ticket.user.username %}
+        <div style=" text-align: right;margin-right: 20px;margin-bottom: 20px;">
+            <form action="{% url 'review_new' ticket.pk %}">
+                <input style="width: 10em;  height: 3em;" type="submit" value="Creer une critique" />
+            </form>
+        </div>
+        {% endifequal %}
+        {% endifnotequal %}
+
+
+        {% endfor %}
+        {% endif %} -->
+    </div>
+    <div style="width: 100%;margin-bottom: 20px;margin-top: 20px;">
+        <!-- <a href="{% url 'review_edit' ticket.pk %}">Edit</a> |
+        <a href="{% url 'review_delete' ticket.pk %}">Delete</a>| -->
+        <div style="width: 50%; float: left; text-align: right;">
+            <form style="margin-right: 20px;" action="{% url 'review_edit' ticket.pk %}">
+                <input style="width: 10em;  height: 3em;" type="submit" value="Modifier" />
+            </form>
+        </div>
+        <div style="margin-left: 50%;">
+            <form style="margin-left: 20px;" action="{% url 'review_delete' ticket.pk %}">
+                <input style="width: 10em;  height: 3em;" type="submit" value="Supprimer" />
+            </form>
+        </div>
+    </div>
+</div>
+<hr>
+{% endif %}
 {% endfor %}
+
 
 {% endblock content %}
