--- a/litrreview/templates/ticket_new.html
+++ b/litrreview/templates/ticket_new.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>New Ticket</h1>
+<h1 style="text-align: center;">Creer un ticket</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Save</button>
+    <button type="submit">Envoyer</button>
 </form>
 {% endblock content %}
