--- a/litrreview/templates/ticket_current_user_list.html
+++ b/litrreview/templates/ticket_current_user_list.html
@@ -8,6 +8,8 @@ Tous les tickets de {{ user }}
 <h1 style="text-align: center;">Vos posts</h1>
 
 {% for ticket in object_list %}
+
+<!-- if post is a ticket -->
 {% if ticket.title %}
 <div style="border-style: solid;width: 80%;margin: auto;word-wrap:break-word;">
     <div style="font-size: 10px; text-align: right;vertical-align: text-top;">
@@ -15,26 +17,9 @@ Tous les tickets de {{ user }}
     </div>
     <div>Vous avez demande une critique</div>
     <br>
-    <!-- <div><a href="{% url 'ticket_detail' ticket.pk %}">{{ticket.title}}</a></div> -->
     <div>{{ticket.title}}</div>
     <p>{{ticket.description}}</p>
     <img src="{{ ticket.image.url }}" alt="no image" width="90" height="144">
-
-    <!-- {% if  ticket.comments.all %}
-    {% if ticket.comments.all|length_is:"1" %}
-    {% for comment in ticket.comments.all %}
-    {% ifnotequal  comment.user.username user.username %}
-    {% ifequal comment.user.username ticket.user.username %}
-    <div style=" text-align: right;margin-right: 20px;margin-bottom: 20px;">
-        <form action="{% url 'review_new' ticket.pk %}">
-            <input style="width: 10em;  height: 3em;" type="submit" value="Creer une critique" />
-        </form>
-    </div>
-    {% endifequal %}
-    {% endifnotequal %}
-
-    {% endfor %}
-    {% endif %} -->
     <div style="width: 100%; margin-bottom: 20px;margin: 20px;">
         <div style="width: 50%; float: left;text-align: right;margin-bottom: 20px;">
             <form style="margin-right: 20px;" action="{% url 'ticket_edit' ticket.pk %}">
@@ -47,17 +32,6 @@ Tous les tickets de {{ user }}
             </form>
         </div>
     </div>
-
-    <!-- {% else %}
-    <div style=" text-align: right;margin-right: 20px;margin-bottom: 20px;">
-        <!-- <a href="{% url 'ticket_edit' ticket.pk %}">Edit</a> | -->
-    <!-- <a href="{% url 'ticket_delete' ticket.pk %}">Delete</a>| -->
-    <!-- <form action="{% url 'review_new' ticket.pk %}">
-        <input style="width: 10em;  height: 3em;" type="submit" value="Creer une critique" />
-    </form> -->
-</div>
-{% endif %} -->
-
 </div>
 <hr>
 {% else %}
@@ -114,6 +88,7 @@ Tous les tickets de {{ user }}
 </div>
 <hr>
 {% endif %}
+
 {% endfor %}
 
 
