--- a/litrreview/templates/base.html
+++ b/litrreview/templates/base.html
@@ -13,26 +13,54 @@
 </head>
 
 <body>
-    <nav>
-        <div style="text-align: center;">
-            <a href="{% url 'home' %}">LitrReview</a>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+        <a class="navbar-brand" href="{% url 'home' %}">LitrReview</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            {% if user.is_authenticated %}
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link dropdown-toggle drop" id="userMenu" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        {{ user.username }}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                        <a href="{% url 'ticket_list' %}" class="dropdown-item">Flux</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{% url 'ticket_current_user_list' %}" class="dropdown-item">Posts</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{% url 'follow' %}" class="dropdown-item">Abonnements</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{% url 'logout' %}" class="dropdown-item">Se deconnecter</a>
+                    </div>
+                </li>
+            </ul>
+            {% else %}
+            <form class="form-inline ml-auto">
+                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Connexion</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">S'inscrire</a>
+            </form>
+            {% endif %}
         </div>
-        {% if user.is_authenticated %}
-        Welcome {{ user.username }}
-        <a href="{% url 'logout' %}" style="float: right;margin-left: 10px;">Se deconnecter</a>
-        <a href="{% url 'follow' %}" style="float: right;margin-left: 10px;">Abonnements</a>
-        <a href="{% url 'ticket_current_user_list' %}" style="float: right;margin-left: 10px;">Posts</a>
-        <a href="{% url 'ticket_list' %}" style="float: right;">Flux</a>
-        {% else %}
-        <form>
-            <a href="{% url 'login' %}">Connexion</a>
-            <a href="{% url 'signup' %}">S'inscrire</a>
-        </form>
-        {% endif %}
-        <hr>
     </nav>
-    {% block content %}
-    {% endblock content %}
+    <div class="container">
+        {% block content %}
+        {% endblock content %}
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
