--- a/litrreview/templates/registration/login.html
+++ b/litrreview/templates/registration/login.html
@@ -5,5 +5,6 @@
 <h2>Connectez-vous</h2>
 <form method="post">
     {% csrf_token %} {{ form.as_p }}
-    <button type="submit">Se connecter</button> </form>
+    <button class="btn btn-success ml-2" type="submit">Se connecter</button>
+</form>
 {% endblock content %}
