--- a/litrreview/templates/signup.html
+++ b/litrreview/templates/signup.html
@@ -9,6 +9,6 @@
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">S'inscrire</button>
+    <button class="btn btn-success" type="submit">S'inscrire</button>
 </form>
 {% endblock content %}
