--- a/litrreview/templates/follow_delete.html
+++ b/litrreview/templates/follow_delete.html
@@ -6,6 +6,7 @@
 <form method="post">
     {% csrf_token %}
     <p>Are you sure you want to delete "{{ userfollows.followed_user }}" ?</p>
-    <button type="submit">Confirm</button>
+    <button class="btn btn-danger ml-2" type="submit">Confirmer</button>
+
 </form>
 {% endblock content %}
