--- a/litrreview/templates/follow_user_list.html
+++ b/litrreview/templates/follow_user_list.html
@@ -8,8 +8,8 @@ Tous les abonnes de {{ user }}
 
 
 {% block content %}
-<form style="text-align: center;" action="" method="post">
-    <h1>Suivre d'autres utilisateurs</h1>
+
+<form method="post" novalidate>
     {% csrf_token %}
     {% if form.errors %}
     {% for field in form %}
@@ -25,11 +25,9 @@ Tous les abonnes de {{ user }}
     </div>
     {% endfor %}
     {% endif %}
-
-    {{ form.follower  }}
-    <input type="submit" value="Envoyer">
+    {{ form.follower|as_crispy_field }}
+    <button type="submit" class="btn btn-success">Envoyer</button>
 </form>
-
 <h1 style="text-align: center;">Abonnements</h1>
 <div>
     <table style="width: 80%;margin-left: auto; margin-right: auto;">
