--- a/litrreview/templates/review_new.html
+++ b/litrreview/templates/review_new.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 <h1 style="text-align:center;">Creer une critique</h1>
@@ -15,8 +17,9 @@
     <p>Critique</p>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Envoyer</button>
+        {{ form|crispy }}
+        <button class="btn btn-success" type="submit">Envoyer</button>
+
     </form>
 </div>
 {% endblock content %}
