--- a/litrreview/templates/review_ticket_new.html
+++ b/litrreview/templates/review_ticket_new.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
+
+
 
 {% block content %}
-<form action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Envoyer">
-</form>
-{% endblock content %}
+{% crispy form %}
+{% endblock %}
