--- a/litrreview/templates/ticket_edit.html
+++ b/litrreview/templates/ticket_edit.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 <h1>Modifier votre ticket</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <div>
         <img src="{{ ticket.image.url }}" alt="no image" width="90" height="144">
-
     </div>
-    <button type="submit">Envoyer</button>
+    <button class="btn btn-info ml-2" type="submit">Envoyer</button>
 </form>
 {% endblock content %}
