--- a/litrreview/templates/ticket_new.html
+++ b/litrreview/templates/ticket_new.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 <h1 style="text-align: center;">Creer un ticket</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Envoyer</button>
+    {{ form|crispy }}
+    <button class="btn btn-success" type="submit">Envoyer</button>
 </form>
 {% endblock content %}
